make sure that the index pages progress bar are always aligned

--- a/css/index.less
+++ b/css/index.less
@@ -89,7 +89,7 @@
             font-size: 1.3em;
             font-weight: normal;
             //font-style: italic;
-            //height: 3.5em;
+            height: 35px;
             a {
             font-size: 1.0em;
                 color: @title_color;
